--- a/src/app/shared/color-selection/color-selection.component.html
+++ b/src/app/shared/color-selection/color-selection.component.html
@@ -1,9 +1,10 @@
 <div class="colors">
-
-  <ng-container *ngFor="let color of colors;">
-    <ion-button fill="outline" shape="round" (click)="changeTheme(color.name)" [color]="dark">
-        <ion-icon *ngIf="selectedTheme === color.name" name="checkmark"></ion-icon>
-      {{color?.name}}
-    </ion-button>
-  </ng-container>
+  <ion-item>
+    <ion-label>Selected Theme:</ion-label>
+    <ion-select (ionChange)="changeTheme($event)" [value]="selectedTheme?.id" okText="Okay" cancelText="Dismiss">
+      <ng-container *ngFor="let color of colors;">
+        <ion-select-option [value]="color.id">{{color.name}}</ion-select-option>
+      </ng-container>
+    </ion-select>
+  </ion-item>
 </div>
