Title textbox color not displaying in selected theme as set primary. Removing color property.

--- a/src/app/shared/add-todo/add-todo.component.html
+++ b/src/app/shared/add-todo/add-todo.component.html
@@ -12,7 +12,7 @@
       <ion-card-header>
         <ion-card-subtitle>Todo Title</ion-card-subtitle>
         <ion-item>
-          <ion-input clearInput formControlName="title" color="primary"></ion-input>
+          <ion-input clearInput formControlName="title"></ion-input>
         </ion-item>
       </ion-card-header>
       <ion-card-content>
@@ -25,11 +25,12 @@
           <ion-label>
             <ion-icon name="calendar"></ion-icon>
           </ion-label>
-          <ion-datetime [disabled]="disableDate" [min]="minDate" [value]="selectedDate.value.toISOString()" placeholder="Select date" display-format="MMM DD, YYYY"
-          picker-format="MMM DD, YYYY" (ionChange)="updateDate($event)"></ion-datetime>
+          <ion-datetime [disabled]="disableDate" [min]="minDate" [value]="selectedDate.value.toISOString()"
+            placeholder="Select date" display-format="MMM DD, YYYY" picker-format="MMM DD, YYYY"
+            (ionChange)="updateDate($event)"></ion-datetime>
         </ion-item>
-        
-          
+
+
       </ion-card-content>
 
       <ion-button expand="block" type="submit" [disabled]="todoForm?.invalid">
