--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,1 +1,1 @@
-<app-header title="Dashboard" [online]="appState | async"></app-header>
+<app-header [title]="'Dashboard' | uppercase" [online]="appState | async"></app-header>
