--- a/src/app/setting/setting/setting.component.html
+++ b/src/app/setting/setting/setting.component.html
@@ -1,9 +1,9 @@
-<ion-header color="dark">
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title color="primary">
+    <ion-title color="light">
       {{pageTitle | uppercase}}
     </ion-title>
 
