--- a/src/global.scss
+++ b/src/global.scss
@@ -22,3 +22,9 @@
   --color: white;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+
+.no-padd-top-bottom{
+  padding-top: 0;
+  padding-bottom: 0;
+}
