--- a/src/app/shared/add-todo/add-todo.component.html
+++ b/src/app/shared/add-todo/add-todo.component.html
@@ -7,7 +7,7 @@
 </ion-toolbar>
 <ion-content>
   <ion-card class="welcome-card">
-    <ion-img src="/assets/shapes.svg"></ion-img>
+    <ion-img height="200" alt="taking notes header image" src="/assets/taking_notes.svg"></ion-img>
     <form [formGroup]="todoForm" (ngSubmit)="OnSubmit();">
       <ion-card-header>
         <ion-card-subtitle>Todo Title</ion-card-subtitle>
