--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,16 +1,21 @@
-<app-auth class="ion-page" (submitted)="onSubmit($event)" 
-(formValid)="isFormValid($event)"
-(onGoogleLogin)="signInGoogle();">
-    <div class="heading">Login</div>
-    <ion-button 
-    expand="block" 
+<app-auth
+  class="ion-page"
+  (submitted)="onSubmit($event)"
+  (formValid)="isFormValid($event)"
+  (onGoogleLogin)="signInGoogle()"
+>
+  <ion-img src="/assets/login.svg" height="100"></ion-img>
+  <div class="heading">Login</div>
+  <ion-button
+    expand="block"
     type="submit"
     shape="round"
     class="btn"
-    [disabled]="!formValid">
-      Sign in
-    </ion-button>
-    <ion-button class="action" href="/register" fill="clear">
-      Not registered, Create a free account here.
-    </ion-button>
-  </app-auth>
+    [disabled]="!formValid"
+  >
+    Sign in
+  </ion-button>
+  <ion-button class="action" href="/register" fill="clear">
+    Not registered, Create a free account here.
+  </ion-button>
+</app-auth>
