--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -4,7 +4,7 @@
   (formValid)="isFormValid($event)"
   (onGoogleLogin)="signInGoogle()"
 >
-  <ion-img src="/assets/login.svg" height="100"></ion-img>
+  <ion-img src="/assets/login.svg" class="logo"></ion-img>
   <div class="heading">Login</div>
   <ion-button
     expand="block"
