Removing evironment files

--- a/src/app/shell/shell/shell.component.html
+++ b/src/app/shell/shell/shell.component.html
@@ -1,4 +1,4 @@
-<ion-split-pane color="secondary">
+<ion-split-pane color="secondary" contentId="main-content">
   <ion-menu color="secondary">
     <ion-header color="secondary">
       <ion-toolbar color="secondary">
