--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -13,9 +13,15 @@
     class="btn"
     [disabled]="!formValid"
   >
-    Sign in
+    Sign in {{ loadedStatus | async }}
   </ion-button>
   <ion-button class="action" href="/register" fill="clear">
     Not registered, Create a free account here.
   </ion-button>
 </app-auth>
+<ion-progress-bar
+  type="indeterminate"
+  color="primary"
+  value="0.5"
+  *ngIf="loadingStatus | async"
+></ion-progress-bar>
