--- a/src/app/shell/shell/shell.component.html
+++ b/src/app/shell/shell/shell.component.html
@@ -1,5 +1,5 @@
 <ion-split-pane color="secondary" contentId="main-content">
-  <ion-menu color="secondary">
+  <ion-menu color="secondary" contentId="main-content">
     <ion-header color="secondary">
       <ion-toolbar color="secondary">
         <ion-title>Menu</ion-title>
@@ -27,5 +27,5 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet main></ion-router-outlet>
+  <ion-router-outlet id="main-content" main></ion-router-outlet>
 </ion-split-pane>
